<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/slide_menu_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin40"
        android:text="@string/total_amount"
        android:textColor="@color/black_color"
        android:textSize="@dimen/text18" />

    <TextView
        android:id="@+id/purchase_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin25"
        android:textColor="@color/black_color"
        android:textSize="@dimen/text30" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/purchase_amount"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:layout_marginTop="@dimen/margin25"
        android:gravity="center"
        android:text="@string/imoney_refund"
        android:textColor="@color/black_color"
        android:textSize="@dimen/text15" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"
        android:layout_marginTop="@dimen/margin25"
        android:orientation="vertical" >

        <Button
            android:id="@+id/ipharma_money_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:background="@drawable/header"
            android:text="@string/money_ipharma"
            android:textColor="@color/slide_menu_bg"
            android:visibility="gone" />

        <Button
            android:id="@+id/cash_on_delivery_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/header"
            android:text="@string/cash_on_delivery"
            android:textColor="@color/slide_menu_bg"
            android:visibility="gone" />

        <Button
            android:id="@+id/debit_card_money"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/header"
            android:text="@string/debit_card"
            android:textColor="@color/slide_menu_bg" />

        <Button
            android:id="@+id/credit_card_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/header"
            android:text="@string/credit_card"
            android:textColor="@color/slide_menu_bg" />

        <Button
            android:id="@+id/net_banking_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/header"
            android:text="@string/net_banking"
            android:textColor="@color/slide_menu_bg" />
    </LinearLayout>

</RelativeLayout>
