<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginScreen" >

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin25"
        android:text="@string/app_name"
        android:textSize="@dimen/text21" />

    <LinearLayout
        android:id="@+id/user_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin40"
        android:gravity="center" >

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/user_name"
            android:textSize="@dimen/text14" />

        <EditText
            android:id="@+id/user_edit"
            android:layout_width="@dimen/height150"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin50"
            android:layout_weight="0.6"
            android:hint="@string/enter_user"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="text"
            android:paddingLeft="@dimen/padding2"
            android:textSize="@dimen/text14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pass_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_lay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin40"
        android:gravity="center" >

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/pwd"
            android:textSize="@dimen/text14" />

        <EditText
            android:id="@+id/pass_edit"
            android:layout_width="@dimen/height150"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin50"
            android:layout_weight="0.6"
            android:hint="@string/enter_pass"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/padding2"
            android:textSize="@dimen/text14" />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass_lay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin20"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/login"
        android:textSize="@dimen/text22" />

</RelativeLayout>